examples/compiler_errors/data_mixed_field_forms_e465.flx
// A `data` type that mixes positional and named-field variants.
//
// Expected: E465 Mixed Positional And Named Variants
//   "Data type `Shape` mixes positional and named-field variants."

data Shape {
    Circle(Float)
    Rect { width: Float, height: Float }
}

fn main() {
    42
}
